--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "netlinkwrapper": "^1.1.1"
+    "netlinkwrapper": "^1.1.1",
+    "cfb": "^1.0.7",
+    "jszip": "^3.1.5",
+    "lodash": "^4.17.10",
+    "sax": "^1.2.4",
+    "xlsx-populate": "file://../xlsx-populate"
   }
 }
