--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "lodash": "^4.17.10",
     "dateformat": "^3.0.3",
+    "commander": "^2.19.0",
     "xlsx-populate": "file://../xlsx-populate",
     "netlinkwrapper": "file://../netlinkwrapper"
   }
