--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.10",
-    "dateformat": "^3.0.3",
     "commander": "^2.19.0",
-    "xlsx-populate": "file://../xlsx-populate",
-    "netlinkwrapper": "file://../netlinkwrapper"
+    "dateformat": "^3.0.3",
+    "full-icu": "^1.2.1",
+    "lodash": "^4.17.10",
+    "netlinkwrapper": "file://../netlinkwrapper",
+    "xlsx-populate": "file://../xlsx-populate"
   }
 }
