--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --no-timeouts"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +16,8 @@
     "lodash": "^4.17.10",
     "netlinkwrapper": "file://../netlinkwrapper",
     "xlsx-populate": "file://../xlsx-populate"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0"
   }
 }
