--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "netlinkwrapper": "file://../netlinkwrapper",
     "sequelize": "^4.42.0",
     "tmp": "^0.0.33",
+    "winston": "^3.2.1",
     "xlsx-populate": "file://../xlsx-populate"
   },
   "devDependencies": {
