--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "canvas": "^2.3.1",
     "commander": "^2.19.0",
     "dateformat": "^3.0.3",
     "full-icu": "^1.2.1",
